header bug fixed on mobile

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -349,6 +349,33 @@ ul.dropdown-menu.show {
     scrollbar-gutter: stable;
 }
 
+.responsive-container {
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-bottom: 2rem;
+
+    /* important fix */
+    padding-top: 6rem;
+
+    @media screen and (min-width: 640px) {
+        padding-left: 4rem;
+        padding-right: 4rem;
+        padding-bottom: 4rem;
+        padding-top: 7rem;
+    }
+
+    @media screen and (min-width: 1024px) {
+        padding-left: 6rem;
+        padding-right: 6rem;
+        padding-bottom: 6rem;
+        padding-top: 8rem;
+    }
+}
+
 html,
 body {
     overflow-y: auto;
